# softeng

./: mygame_demo.txt  pyproject.toml  setup.py  zip_linux.sh  zip_mac.sh  zip_windows.bat
exams/proeftentamen/: FNWIexam.sty  Makefile  eso-pic.sty  everyshi.sty  tentamen.tex
softeng/: __init__.py  simulate_repl.py
week1/: compute_grade.py  run_all_tests.sh
week1/1_setup/assignments/: Makefile  addition.py  test_addition.py  test_file_python_venv_png.py
week1/1_setup/src/: compute_distance.py  print_python_venv.py  python_ubuntu.sh  venv_macos.sh  venv_ubuntu.sh  venv_windows.bat  vscode_ubuntu.sh
week1/2_arguments/assignments/: expenses.csv  expenses.py  expenses.run  expenses_cli.py  html_table.py  index.html  list_expenses.run  list_expenses_category.run  list_expenses_category_date.run  test_expenses.csv  test_expenses.py  test_expenses_cli.py
week1/2_arguments/src/: add.py  command_line_arguments.py  compute_distance.py  hello.txt  hello_blue_planet.py  kwargs.py  print_to_file.py  print_vars.py  unpack.py
week1/3_packages/assignments/: approximate.py  combinatorics.py  test_approximate.py  test_combinatorics.py
week1/3_packages/src/: Makefile  make_plot.sh  plot_banckers_round.py  plot_factorial.py  plot_histogram.py  plot_parabola.py  plot_pow.py  plot_pow_log.py  plot_round.py  plot_round_half_up.py  plot_scatter.py  random_examples.py  round.py  seed.py
week2/: run_all_tests.sh
week2/1_exceptions/assignments/: grades1.py  grades_bad.csv  grades_good.csv  (+4 more)
week3/: run_all_tests.sh
week4/: run_all_tests.sh
week5/: run_all_tests.sh
(+116 files in other folders)
