[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softeng"
version = "0.0.1"
description = "Software Engineering course materials"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "pytest-timeout",
]

[tool.setuptools]
packages = ["softeng"]
